// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AIAnalysisCard Component Structure should match snapshot for complete analysis 1`] = `
<View
  accessibilityLabel="AI Analysis: Medium complexity, 85% confidence"
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 1,
      "marginBottom": 16,
      "padding": 20,
      "shadowColor": "#1F2A24",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      accessible={false}
      color="#8B5CF6"
      name="sparkles"
      size={20}
    />
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#1A2520",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      AI Analysis
    </Text>
    <View
      style={
        {
          "backgroundColor": "#8B5CF6",
          "borderRadius": 8,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 12,
            "fontWeight": "600",
          }
        }
      >
        85
        % confidence
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#768079",
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginTop": 12,
          "textTransform": "uppercase",
        }
      }
    >
      Estimated Complexity
    </Text>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 15,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Medium
    </Text>
    <Text
      style={
        {
          "color": "#768079",
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginTop": 12,
          "textTransform": "uppercase",
        }
      }
    >
      Estimated Duration
    </Text>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 15,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      2-4 hours
    </Text>
    <Text
      style={
        {
          "color": "#768079",
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginTop": 12,
          "textTransform": "uppercase",
        }
      }
    >
      Suggested Tools
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 4,
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#E9F1EB",
            "borderRadius": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 13,
            }
          }
        >
          Pipe wrench
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#E9F1EB",
            "borderRadius": 8,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          }
        }
      >
        <Text
          style={
            {
              "color": "#1A2520",
              "fontSize": 13,
            }
          }
        >
          Plumber's tape
        </Text>
      </View>
    </View>
    <Text
      style={
        {
          "color": "#768079",
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginTop": 12,
          "textTransform": "uppercase",
        }
      }
    >
      Recommended Actions
    </Text>
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 15,
          "lineHeight": 20,
          "marginTop": 2,
        }
      }
    >
      Check for water damage
    </Text>
  </View>
</View>
`;

exports[`AIAnalysisCard Component Structure should match snapshot for loading state 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 1,
      "marginBottom": 16,
      "padding": 20,
      "shadowColor": "#1F2A24",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      accessible={false}
      color="#8B5CF6"
      name="sparkles"
      size={20}
    />
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#1A2520",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      Building Assessment
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "justifyContent": "center",
        "paddingVertical": 20,
      }
    }
  >
    <ActivityIndicator
      accessibilityLabel="Analyzing job photos"
      color="#1A2520"
      size="small"
    />
    <Text
      style={
        {
          "color": "#4A5751",
          "fontSize": 15,
        }
      }
    >
      Analyzing job photos...
    </Text>
  </View>
</View>
`;

exports[`AIAnalysisCard Component Structure should match snapshot for minimal analysis 1`] = `
<View
  accessibilityLabel="AI Analysis: Medium complexity, 85% confidence"
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 1,
      "marginBottom": 16,
      "padding": 20,
      "shadowColor": "#1F2A24",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.06,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      accessible={false}
      color="#8B5CF6"
      name="sparkles"
      size={20}
    />
    <Text
      accessibilityRole="header"
      style={
        {
          "color": "#1A2520",
          "flex": 1,
          "fontSize": 18,
          "fontWeight": "700",
        }
      }
    >
      AI Analysis
    </Text>
    <View
      style={
        {
          "backgroundColor": "#8B5CF6",
          "borderRadius": 8,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontSize": 12,
            "fontWeight": "600",
          }
        }
      >
        85
        % confidence
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#768079",
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginTop": 12,
          "textTransform": "uppercase",
        }
      }
    >
      Estimated Complexity
    </Text>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 15,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      Medium
    </Text>
    <Text
      style={
        {
          "color": "#768079",
          "fontSize": 12,
          "fontWeight": "700",
          "letterSpacing": 0.8,
          "marginTop": 12,
          "textTransform": "uppercase",
        }
      }
    >
      Estimated Duration
    </Text>
    <Text
      style={
        {
          "color": "#1A2520",
          "fontSize": 15,
          "fontWeight": "500",
          "marginTop": 2,
        }
      }
    >
      2-4 hours
    </Text>
  </View>
</View>
`;

exports[`AIAnalysisCard Component Structure should match snapshot for null state 1`] = `null`;
